@@ -67,7 +67,7 @@ from numerix import array, asarray, arange, divide, exp, arctan2, \
      absolute, matrixmultiply, power, take, where, Float, Int, asum,\
      dot, convolve, pi, Complex, ones, zeros, diagonal, Matrix, nonzero, \
      log, searchsorted, concatenate, sort, ArrayType, clip, size, indices,\
-     conjugate
+     conjugate, typecode, iscontiguous
 
 
 from numerix.mlab import hanning, cov, diff, svd, rand, std
@@ -167,10 +167,10 @@ def psd(x, NFFT=256, Fs=2, detrend=detrend_none,
     
 
     # for real x, ignore the negative frequencies
-    if x.typecode()==Complex: numFreqs = NFFT
+    if typecode(x)==Complex: numFreqs = NFFT
     else: numFreqs = NFFT//2+1
         
-    windowVals = window(ones((NFFT,),x.typecode()))
+    windowVals = window(ones((NFFT,),typecode(x)))
     step = NFFT-noverlap
     ind = range(0,len(x)-NFFT+1,step)
     n = len(ind)
@@ -230,10 +230,10 @@ def csd(x, y, NFFT=256, Fs=2, detrend=detrend_none,
         y[n:] = 0
 
     # for real x, ignore the negative frequencies
-    if x.typecode()==Complex: numFreqs = NFFT
+    if typecode(x)==Complex: numFreqs = NFFT
     else: numFreqs = NFFT//2+1
         
-    windowVals = window(ones((NFFT,),x.typecode()))
+    windowVals = window(ones((NFFT,),typecode(x)))
     step = NFFT-noverlap
     ind = range(0,len(x)-NFFT+1,step)
     n = len(ind)
@@ -412,7 +412,7 @@ def vander(x,N=None):
 
     """
     if N is None: N=len(x)
-    X = ones( (len(x),N), x.typecode())
+    X = ones( (len(x),N), typecode(x))
     for i in range(N-1):
         X[:,i] = x**(N-i-1)
     return X
@@ -495,7 +495,7 @@ def cohere_pairs( X, ij, NFFT=256, Fs=2, detrend=detrend_none,
     # zero pad if X is too short
     if numRows < NFFT:
         tmp = X
-        X = zeros( (NFFT, numCols), X.typecode())
+        X = zeros( (NFFT, numCols), typecode(X))
         X[:numRows,:] = tmp
         del tmp
 
@@ -510,13 +510,13 @@ def cohere_pairs( X, ij, NFFT=256, Fs=2, detrend=detrend_none,
     del seen
     
     # for real X, ignore the negative frequencies
-    if X.typecode()==Complex: numFreqs = NFFT
+    if typecode(X)==Complex: numFreqs = NFFT
     else: numFreqs = NFFT//2+1
 
     # cache the FFT of every windowed, detrended NFFT length segement
     # of every channel.  If preferSpeedOverMemory, cache the conjugate
     # as well
-    windowVals = window(ones((NFFT,), X.typecode()))
+    windowVals = window(ones((NFFT,), typecode(X)))
     ind = range(0, numRows-NFFT+1, NFFT-noverlap)
     numSlices = len(ind)
     FFTSlices = {}
@@ -692,7 +692,7 @@ def longest_contiguous_ones(x):
     if len(ind)==0:  return arange(len(x))
     if len(ind)==len(x): return array([])
 
-    y = zeros( (len(x)+2,),  x.typecode())
+    y = zeros( (len(x)+2,),  typecode(x))
     y[1:-1] = x
     dif = diff(y)
     up = find(dif ==  1);
@@ -1117,10 +1117,10 @@ def specgram(x, NFFT=256, Fs=2, detrend=detrend_none,
     
 
     # for real x, ignore the negative frequencies
-    if x.typecode()==Complex: numFreqs = NFFT
+    if typecode(x)==Complex: numFreqs = NFFT
     else: numFreqs = NFFT//2+1
         
-    windowVals = window(ones((NFFT,),x.typecode()))
+    windowVals = window(ones((NFFT,),typecode(x)))
     step = NFFT-noverlap
     ind = arange(0,len(x)-NFFT+1,step)
     n = len(ind)
@@ -1421,14 +1421,14 @@ def amap(fn,*args):
 def zeros_like(a):
     """Return an array of zeros of the shape and typecode of a."""
 
-    return zeros(a.shape,a.typecode())
+    return zeros(a.shape,typecode(a))
 
 def sum_flat(a):
     """Return the sum of all the elements of a, flattened out.
 
     It uses a.flat, and if a is not contiguous, a call to ravel(a) is made."""
 
-    if a.iscontiguous():
+    if iscontiguous(a):
         return asum(a.flat)
     else:
         return asum(ravel(a))
@@ -1535,7 +1535,7 @@ def diagonal_matrix(diag):
 
     return diag*identity(len(diag))
 
-def identity(n,rank=2,typecode='l'):
+def identity(n,rank=2,typecode=Int):
     """identity(n,r) returns the identity matrix of shape (n,n,...,n) (rank r).
 
     For ranks higher than 2, this object is simply a multi-index Kronecker
