@@ -9,7 +9,11 @@
 #ifdef NUMARRAY
 #include "numarray/arrayobject.h" 
 #else
+#ifdef NUMERIC
 #include "Numeric/arrayobject.h" 
+#else
+#include "scipy/arrayobject.h"
+#endif
 #endif   
 
 #include "agg_pixfmt_rgb.h"
